--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,21 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+def keystoreProperties = new Properties()
+keystoreProperties.load(rootProject.file("keystore.properties").newDataInputStream())
+
+def localProperties = new Properties()
+localProperties.load(rootProject.file('local.properties').newDataInputStream())
+
 android {
+    signingConfigs {
+        zhet {
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+        }
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "zhet.wi.fi.note"
@@ -13,8 +27,14 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled = true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.zhet
+            applicationVariants.all { variant ->
+                variant.outputs.all {
+                    outputFileName = "WfiNote.apk"
+                }
+            }
         }
     }
 }
